5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1637_2445.log
== TEST (2019-04-11 11:05:17) 
-- CODE:
l = input("converter para: ")
x = float("valor da temperatura: ")

if(l=="f"):
	c = 5/9*(x-32)
	print(c)
else:
	f= (x*9/5)+32
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = float("valor da temperatura: ")
ValueError: could not convert string to float: 'valor da temperatura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:05:53) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="f"):
	c = 5/9*(x-32)
	print(c)
else:
	f= (x*9/5)+32
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:06:54) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="f"):
	c = 5/9*(x-32)
	print(round(c, 2)
else:
	f= (x*9/5)+32
	print(round(f, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:10) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="f"):
	c = 5/9*(x-32)
	print(round(c, 2))
else:
	f= (x*9/5)+32
	print(round(f, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:24) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="f"):
	c = 5/9*(x-32)
	print(round(c, 2))
else:
	f= (x*9/5)+32
	print(round(f, 2))
-- EXECUTION TIME:
0.224674
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:45) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="F"):
	c = 5/9*(x-32)
	print(round(c, 2))
else:
	f= (x*9/5)+32
	print(round(f, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:08:06) 
-- CODE:
l = input("converter para: ")
x = float(input("valor da temperatura: "))

if(l=="F"):
	c = 5/9*(x-32)
	print(round(c, 2))
else:
	f= (x*9/5)+32
	print(round(f, 2))
-- EXECUTION TIME:
0.231361
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
